# qldpc

./: .gitignore  CITATION.cff  LICENSE  README.md  ROADMAP.md  lake-manifest.json  lakefile.lean  pyproject.toml
certs/: RunCert_code72_p0_02_s20260805_success.lean  RunCert_code72_p0_02_s3_success.lean  RunCert_code72_p0_03_s999_success.lean  RunCert_code72_p0_06_s11_failure.lean  RunCert_code72_p0_06_s20260905_failure.lean  RunCert_code90_p0_02_s20260805_success.lean  RunCert_code90_p0_06_s20260905_failure.lean  RunCert_gross144_p0_02_s20260805_success.lean  RunCert_gross144_p0_02_s5_success.lean  RunCert_gross144_p0_06_s20260905_failure.lean
certs/attacks/: README.md  attack1_garbage_highbit.lean  attack2_forged_success.lean  attack3_corrupt_syndrome.lean  attack4_garbage_witness_sound.lean  run_attacks.sh
certs/packed/: PackedBatch_code72_p0_06_s999_n12.lean  (+2 more)
ci/: lean.yml  python.yml
docs/: technical_brief.md
hardware/: code72_checker.v  code72_netlist.json  gross144_checker.v  gross144_netlist.json
impl/: README_impl.md  __init__.py  bench.py  certgen.py  codes.py  crosscheck.py  decoder.py  logical.py  phenomenological.py  requirements.txt  rtl_equiv.py  structured.py
impl/audit/: chain.py  verify_chain.py
proofs/: AxiomAudit.lean  BBCode.lean  DecoderCert.lean  GenericCert.lean  Netlist.lean  PackedCert.lean  QCCirculant.lean
rtl/: code72_checker.v  gate_report.json  gross144_checker.v
scripts/: EmitRTL.lean
simulations/: README.md  fetch_libs.sh  gen_vectors.py  phenom_demo.py  stream_demo.py  synth_sfq.ys  tb_josim.sp  test_qldpc_checker.py
(+4 files in other folders)
